# voicedown

./: .gitattributes  .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/python_asr/: asr_server.py  dictionary.json.example  requirements.txt  verify_api.py  verify_punc.py
src-tauri/python_asr/tests/: test_punc_lazyload.py  test_stream_buffer.py  test_stub_model.py
src-tauri/src/: asr_session.rs  asr_supervisor.rs  audio_capture.rs  capture_finalizer.rs  dictionary.rs  dsp.rs  export_config.rs  json_config_store.rs  lib.rs  main.rs  punc_pipeline.rs  python_bridge.rs  t2s_data.txt  text_optimizer.rs  text_postprocess.rs  time_util.rs  wav_render.rs  window_selector.rs
src/components/: DictionaryModal.tsx  ExportSettingsModal.tsx  SettingsModal.tsx  WindowDropdown.tsx
src/hooks/: useAsrState.ts  useCaptureLifecycle.ts  useTranscriptionStreams.ts
